@@ -792,18 +792,32 @@ int storage_sync_destroy()
 int kill_storage_sync_threads()
 {
 	int result;
+	int kill_res;
 
-	if (sync_tids != NULL)
+	if (sync_tids == NULL)
 	{
-		result = kill_work_threads(sync_tids, \
-				g_storage_sync_thread_count);
-	}
-	else
-	{
-		result = 0;
+		return 0;
 	}
 
-	return result;
+	if ((result=pthread_mutex_lock(&sync_thread_lock)) != 0)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"call pthread_mutex_lock fail, " \
+			"errno: %d, error info: %s", \
+			__LINE__, result, strerror(result));
+	}
+
+	kill_res = kill_work_threads(sync_tids, g_storage_sync_thread_count);
+
+	if ((result=pthread_mutex_unlock(&sync_thread_lock)) != 0)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"call pthread_mutex_unlock fail, " \
+			"errno: %d, error info: %s", \
+			__LINE__, result, strerror(result));
+	}
+
+	return kill_res;
 }
 
 int fdfs_binlog_sync_func(void *args)
